[package]
name = "cucumber-expressions"
version = "0.3.0"
edition = "2021"
rust-version = "1.62"
description = "Cucumber Expressions AST and parser."
license = "MIT OR Apache-2.0"
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/cucumber-expressions"
homepage = "https://github.com/cucumber-rs/cucumber-expressions"
repository = "https://github.com/cucumber-rs/cucumber-expressions"
readme = "README.md"
categories = ["compilers", "parser-implementations"]
keywords = ["cucumber", "expression", "expressions", "cucumber-expressions"]
include = ["/src/", "/LICENSE-*", "/README.md", "/CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables ability to expand AST into regex.
into-regex = ["dep:either", "dep:regex", "dep:regex-syntax"]

[dependencies]
derive_more = { version = "0.99.17", features = ["as_ref", "deref", "deref_mut", "display", "error", "from", "into"], default_features = false }
nom = "7.0"
nom_locate = "4.0"

# "into-regex" feature dependencies
either = { version = "1.6", optional = true }
regex = { version = "1.8.1", optional = true }
regex-syntax = { version = "0.7.1", optional = true }

[workspace]
members = ["fuzz"]
